<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#3366FF"
    tools:context=".RegisterActivity" >

    <TextView
        android:text="@string/register"
        android:textSize="40sp"
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />
    
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="10dp"
    	android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp"
    	android:layout_gravity="center_horizontal"
    	android:background="@drawable/border"
    	android:orientation="vertical" >
    
	    <EditText 
	        android:id="@+id/registerUsername"
	        android:hint="@string/register_username"
	   		android:inputType="text"
	   		android:layout_width="match_parent"
	   		android:layout_height="wrap_content"
	   		android:layout_marginTop="8dp" />
	    
	    <EditText 
	        android:id="@+id/registerPassword"
	        android:hint="@string/register_password"
	   		android:inputType="text"
	   		android:layout_width="match_parent"
	   		android:layout_height="wrap_content"
	   		android:layout_marginTop="8dp" />
	    
	    <TextView
	        android:text="@string/valid_password"
	        android:textSize="12sp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp" />
	    
	    <EditText 
	        android:id="@+id/registerName"
	        android:hint="@string/register_name"
	   		android:inputType="text"
	   		android:layout_width="match_parent"
	   		android:layout_height="wrap_content"
	   		android:layout_marginTop="8dp" />
	    
	    <EditText 
	        android:id="@+id/registerEmail"
	        android:hint="@string/register_email"
	   		android:inputType="textEmailAddress"
	   		android:layout_width="match_parent"
	   		android:layout_height="wrap_content"
	   		android:layout_marginTop="8dp" />
	</LinearLayout>
    
    <Button 
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_gravity="right"
        android:text="@string/register_button"
        android:textColor="#FFFFFF"
        android:onClick="registerUser" />

</LinearLayout>
