<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#3366FF"
    tools:context=".LoginActivity" >
    
    <ImageView
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_margin="20dp"
	    android:layout_gravity="center_horizontal"
        android:src="@drawable/soace"
        android:contentDescription="@string/so_ace" />

    <TextView
        android:text="@string/enter_login"
        android:textSize="40sp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <EditText 
        android:id="@+id/usernameText"
        android:hint="@string/enter_username"
   		android:inputType="text"
   		android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:layout_margin="10dp"
   		android:background="@drawable/border" />
    
    <EditText 
        android:id="@+id/passwordText"
        android:hint="@string/enter_password"
   		android:inputType="textPassword"
   		android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:layout_margin="10dp"
   		android:background="@drawable/border" />
	
    <Button 
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:text="@string/login_button"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:onClick="goToMain" />
    
    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/register_text"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:onClick="goToRegister"
        android:clickable="true" />

</LinearLayout>
