<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#3366FF"
    tools:context=".AddAccountActivity" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/new_account"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        />
    
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="10dp"
    	android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp"
    	android:layout_gravity="center_horizontal"
    	android:background="@drawable/border"
    	android:orientation="vertical" >

	    <EditText 
	        android:id="@+id/accountName"
	        android:hint="@string/account_name"
	   		android:inputType="text"
	   		android:layout_width="match_parent"
	   		android:layout_height="wrap_content"
	   		android:layout_marginTop="8dp" />
	    
	    <EditText 
	        android:id="@+id/balance"
	        android:hint="@string/balance"
	   		android:inputType="numberDecimal"
	   		android:layout_width="match_parent"
	   		android:layout_height="wrap_content"
	   		android:layout_marginTop="8dp" />
	    
	    <EditText 
	        android:id="@+id/interest"
	        android:hint="@string/interest"
	   		android:inputType="numberDecimal"
	   		android:layout_width="match_parent"
	   		android:layout_height="wrap_content"
	   		android:layout_marginTop="8dp" />
	</LinearLayout>
    
    <Button 
        android:id="@+id/acceptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_gravity="right"
        android:text="@string/accept_button"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:onClick="accept" />
    
    <Button 
        android:id="@+id/declineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_gravity="right"
        android:text="@string/decline_button"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:onClick="decline" />

</LinearLayout>
